--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,8 +13,7 @@
         <item >Balance</item>
         <item >Add Funds</item>
         <item >Transactions</item>
-        <item >Hours</item>
-        <item >Contacts</item>
+        <item >Contacts &amp; Hours</item>
         <item >Log out</item>
     </string-array>
     
